# junior_job_notifier

./: .dockerignore  .env.docker.example  .env.example  Dockerfile  README.md  alembic.ini  common_settings.py  docker-compose.yml  exam_batch.py  match_new_batch.py  match_once.py  profile.yaml  pyproject.toml  run.py  scrapy.cfg
.github/workflows/: scraper_scheduler.yml
alembic/: env.py  script.py.mako
alembic/versions/: 04c310f7585f_add_fields_to_vac.py  2b801dd03393_query_text_are_mullable_in_userprofile.py  79402d387bb8_add_embedding_column_to_vacancies_and_.py  83724a0cd9a7_drop_matcherstate.py  cd00ae2fc817_add_last_matched_at_remove_keyword_.py  df5cf8a6f982_add_vacancy_last_seen_at.py  e4a8b1c2d3f4_initial_schema.py  eed1640ddd41_add_fields_to_vac.py  fa0193841fde_add_matcherstate.py  ff40b567dad5_remove_content_hash_from_vacancy_remove_.py
db/: __init__.py  ai_schema.sql  crud.py  models.py  schemas.py  session.py
db_old/: ai_schema.sql
filter/: matching.py
scrap_vac/: items.py  middlewares.py  pipelines.py  settings.py
scrap_vac/db/: __init__.py  crud.py  models.py  schemas.py
scrap_vac/spiders/: anderson.py  anderson_ai.py  breezy.py  breezy_ai.py  common.py  conversion_rate.py  epam.py  gen_tech.py  gen_tech_ai.py  newxel.py  sigma_technology.py  sigma_technology_ai.py  star_global.py  star_global_ai.py  thingsboard.py  thingsboard_ai.py  tieto.py  tieto_ai.py
telegram/: notification.py
