[project]
name = "junior-job-notifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pyyaml>=6.0.3",
    "psycopg2-binary>=2.9.12",
    "sentence-transformers>=5.1.1",
    "scrapy>=2.15.2",
    "scrapy-playwright>=0.0.46",
]
